--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "franklin_wh",
   "name": "FranklinWH",
-  "codeowners": ["@richo"],
+  "codeowners": ["@razorman8669"],
   "dependencies": [],
-  "documentation": "https://github.com/richo/homeassistant-franklinwh/wiki",
+  "documentation": "https://github.com/razorman8669/homeassistant-franklinwh/wiki",
   "iot_class": "cloud_polling",
   "integration_type": "hub",
-  "requirements": ["franklinwh>=0.0.10"],
-  "version": "0.1.4"
+  "requirements": ["certifi==2024.2.2", "charset-normalizer==3.3.2", "idna==3.6", "requests==2.31.0", "urllib3==2.2.1"],
+  "version": "0.2.0"
 }
