remove erroneous dependencies

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
   "documentation": "https://github.com/razorman8669/homeassistant-franklinwh/wiki",
   "iot_class": "cloud_polling",
   "integration_type": "hub",
-  "requirements": ["certifi==2024.2.2", "charset-normalizer==3.3.2", "idna==3.6", "requests==2.31.0", "urllib3==2.2.1"],
+  "requirements": ["requests==2.32.3"],
   "version": "0.2.0"
 }
